config: readjust obsidian config

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,7 @@
-{}
+{
+  "spellcheck": true,
+  "defaultViewMode": "preview",
+  "showLineNumber": true,
+  "showInlineTitle": false,
+  "smartIndentList": false
+}
