config: readjust config files

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,6 @@
   "defaultViewMode": "preview",
   "showLineNumber": true,
   "showInlineTitle": false,
-  "smartIndentList": false
+  "smartIndentList": false,
+  "alwaysUpdateLinks": true
 }
